# extracting-products-from-furniture-websites

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
data/processed/: manual_dataset.json
scripts/: collect_text.py
scripts/research/: data_processor.py  evaluate_soft.py  train.py
src/: data_processor.py  evaluate_soft.py  predictor.py
src/api/: main.py
src/core/: config.py
src/domain/: schemas.py
src/services/: inference.py  scraper.py
src/ui/: app.py
