[project]
name = "furniture-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "beautifulsoup4>=4.14.3",
    "evaluate>=0.4.6",
    "fastapi>=0.129.0",
    "numpy>=2.2.6",
    "openai>=2.20.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "seqeval>=1.2.2",
    "streamlit>=1.54.0",
    "torch>=2.10.0",
    "transformers>=5.1.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "datasets>=4.5.0",
    "tqdm>=4.67.3",
    "trafilatura>=2.0.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
